--- a/docs/docs/how-to/load-configs.mdx
+++ b/docs/docs/how-to/load-configs.mdx
@@ -16,7 +16,7 @@ There are different ways to load configurations into your application:
 
 <details><summary>From a file</summary>
 
-First, configure your project in a yaml file:
+First, configure your project in a YAML file:
 
 <CodeBlock showLineNumbers language="yaml" title="config.dist.yml">{ConfigDist}</CodeBlock>
 
@@ -78,9 +78,9 @@ Once you've loaded your configurations, you can access them with type-specific g
 
 ## Conclusion
 
-In this guide, you've learned multiple ways to load configurations into your app with gosoline.
+In this guide, you've learned multiple ways to load configurations into your app with Gosoline.
 
-Check out these resources to learn more about configurations and gosoline:
+Check out these resources to learn more about configurations and Gosoline:
 
-- [Configure a logger with gosoline](/how-to/logging/use-loggers#implement-a-logger-with-an-app-configuration)
-- [API reference for the cfg package](/reference/package-cfg)
+- [Configure a logger with Gosoline](/how-to/logging/use-loggers#implement-a-logger-with-an-app-configuration)
+- [API reference for the `cfg` package](/reference/package-cfg)
