--- a/docs/docs/how-to/logging/implement-a-log-handler.mdx
+++ b/docs/docs/how-to/logging/implement-a-log-handler.mdx
@@ -6,7 +6,7 @@ title: Implement a log handler
 import CodeBlock from '@theme/CodeBlock';
 import LogHandler from "!!raw-loader!./src/log-handler/main.go";
 
-With the `cfg` and `log` packages, you can implement a handler and make it available via config.
+With the `cfg` and `log` packages, you can implement a handler and make it available via configuration.
 
 ## Before you begin
 
@@ -22,7 +22,7 @@ Here is a preview of all the code you'll cover in this guide:
 
 ## Implement your custom log handler
 
-### Import your gosoline dependencies
+### Import your Gosoline dependencies
 
 Add the following imports to your code:
 
@@ -36,7 +36,7 @@ import (
 )
 ```
 
-Here, you imported some standard dependencies, along with the `cfg` and `log` packages from gosoline.
+Here, you imported some standard dependencies, along with the `cfg` and `log` packages from Gosoline.
 
 ### Create a settings struct
 
@@ -140,7 +140,7 @@ That's it! In this guide, you:
 - Created a handler factory.
 - Added your factory to the logging configuration.
 
-Check out these resources to learn more about logging with gosoline:
+Check out these resources to learn more about logging with Gosoline:
 
 - [Use loggers](/how-to/logging/use-loggers)
 - [API reference for the log package](/reference/package-log)
