--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -10,10 +10,10 @@ Gosoline is a Golang-based application framework specialized for building micros
 
 ## Primary use cases
 
-There are three primary uses cases for gosoline:
+There are three primary uses cases for Gosoline:
 
 <PrimaryUseCases />
 
 <br />
 
-Want to skip the guided walkthroughs and get straight to the information? Check out our [API reference docs](/category/reference).
+Want to skip the guided walk-throughs and get straight to the information? Check out our [API reference docs](/category/reference).
