--- a/docs/docs/quickstart/testing/test-your-consumer.mdx
+++ b/docs/docs/quickstart/testing/test-your-consumer.mdx
@@ -49,7 +49,7 @@ import (
 )
 ```
 
-Here, you've imported the standard `testing` package as well as gosoline's `test/suite`.
+Here, you've imported the standard `testing` package as well as Gosoline's `test/suite`.
 
 ### Create a test suite
 
@@ -91,7 +91,7 @@ This is run at the beginning of every suite. It's required, and it provides all 
 
 Here, you:
 
-1. Load settings from a specified config file.
+1. Load settings from a specified configuration file.
 2. Test the specified consumer.
 
 ### Create a test case
@@ -206,9 +206,9 @@ This provides a detailed explanation of the test failure.
 
 ## Conclusion
 
-You're done! You created your first integration test with gosoline.
+You're done! You created your first integration test with Gosoline.
 
-Check out these resources to learn more about testing and creating consumers with gosoline:
+Check out these resources to learn more about testing and creating consumers with Gosoline:
 
 - [Create a consumer](/quickstart/create-a-consumer)
 - [Write integration tests](/how-to/write-integration-tests)
