--- a/docs/docs/how-to/logging/use-loggers.mdx
+++ b/docs/docs/how-to/logging/use-loggers.mdx
@@ -8,7 +8,7 @@ import MinimumLogger from "!!raw-loader!./src/minimal-logger/main.go";
 import LoggerConfig from "!!raw-loader!./src/config-logger/config.dist.yml";
 import ConfigLogger from "!!raw-loader!./src/config-logger/main.go";
 
-With gosoline, there are multiple ways to configure and use a logger.
+With Gosoline, there are multiple ways to configure and use a logger.
 
 ## Implement a logger directly in code
 
@@ -28,7 +28,7 @@ Here, you:
 
 If you have an application, you can create a logger from your app's configuration.
 
-First, configure your logger in your configuration. For example, in a config file:
+First, configure your logger in your configuration. For example, in a configuration file:
 
 <CodeBlock showLineNumbers language="yml" title="config.dist.yml">{LoggerConfig}</CodeBlock>
 
@@ -38,9 +38,9 @@ Then, implement your logger alongside your application:
 
 ## Conclusion
 
-In this guide, you've learned multiple ways to implement a logger with gosoline.
+In this guide, you've learned multiple ways to implement a logger with Gosoline.
 
-Check out these resources to learn more about logging with gosoline:
+Check out these resources to learn more about logging with Gosoline:
 
 - [Implement a log handler](/how-to/logging/implement-a-log-handler)
 - [API reference for the log package](/reference/package-log)
