--- a/docs/docs/reference/package-fixtures.mdx
+++ b/docs/docs/reference/package-fixtures.mdx
@@ -2,9 +2,9 @@
 title: Package fixtures
 ---
 
-# Gosoline Fixture Loader
+# Gosoline fixture loader
 
-While using *gosoline* you are able to define fixtures directly in code.
+While using Gosoline you are able to define fixtures directly in code.
 
 ## Usage
 * Enable fixture loading in your `config.dist.yml` File
@@ -37,7 +37,8 @@ You can easily define multiple fixtures to different destinations in one file an
   * `RedisKvStoreFixtureWriterFactory`
   * `BlobFixtureWriterFactory`
 
-## Quick Usage
+## Quick usage
+
 * During the creation of your Application make sure to pass the `WithFixtures` option and provide fixtures as an argument of type `[]*fixtures.FixtureSet`
 
 [embedmd]:# (../../examples/fixtures/main.go /func main/ /}/)
@@ -59,7 +60,7 @@ blob:
     bucket: s3-fixtures-bucket
 ```
 
-## ID Generation
+## ID generation
 You can also generate a locally unique identifier for your fixtures via `fixtures.AutoNumbered`.
 
 ## Example with available fixture writers:
@@ -171,7 +172,7 @@ var fixtureSets = []*fixtures.FixtureSet{
 }
 ```
 
-## Named Fixtures
+## Named fixtures
 In case you want to reuse your fixtures values for assertions or additional processing, you can load them by name when using `fixtures.NamedFixtureSets`:
 
 [embedmd]:# (../../examples/fixtures/named/main.go /func main/ $)
@@ -223,7 +224,7 @@ func (b *namedFixtureBuilder) GetNamed(name string) *DynamoDbExampleModel {
 }
 ```
 
-## Further Information
+## Further information
 * Existing fixtures will be updated instead of created.
 * When purge is enabled only the destination of the fixtures will be purged, not everything. That means for example while loading MySQL Fixtures with purge only the tables will be purged not the whole database.
 * If you want to use the `MysqlOrmFixtureWriterFactory` make sure that your fixture struct embeds `db_repo.Model`
